--- a/style.css
+++ b/style.css
@@ -26,6 +26,20 @@ body{
     color: #7f8fa6;
     font-weight: 200;
 }
+.serech-box{
+    width: 100%;
+    height: 90px;
+    background-color: #7f8fa6; 
+    margin-top: 1px;
+    padding: 0px;
+}
+.seatch{
+    width: 30%;
+    margin: 2%;
+    padding: 0.6%;
+    border: 2px solid #353b48;
+    border-radius: 9px;
+}
 .logo{
     width: 200px;
     clear: both;
