--- a/style.css
+++ b/style.css
@@ -58,7 +58,17 @@ input[type=submit]{
     float: right;
     margin: 20px;
 }
-main{
+main {
+    margin-top: 60px;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    width: 80%;
+   
+
+
+}
+/*main{
     width: 90%;
     height: 500px;
     background-color: #353b48;
@@ -88,7 +98,7 @@ main .c2 > a img{
 }
 main div a img:hover{
     opacity: 0.8;
-}
+}*/
 
 .news-bar{
     background-color: #999b9ebe;
