--- a/style.css
+++ b/style.css
@@ -228,6 +228,48 @@ header > .hr{
     clear: both;
     float: right;
 }
+.artcle1 {
+    width: 60%;
+    margin-top: 10px;
+    height: 200px;
+    text-align: center;
+    margin: auto;
+    overflow: hidden;
+}
+
+.artcle1 h1 {
+     margin: auto;
+    font-size: 18px;
+    margin-top: 100px;
+    font-family: monospace;
+
+}
+
+.img1 {
+    padding: 4px;
+    width: 70%;
+    height: 200px;
+    margin: auto;
+    clear: both;
+    position: relative;
+    top: 10px;
+
+}
+
+.img1 img {
+    width: 100%;
+    height: 200%;
+    overflow: hidden;
+    padding: 8px;
+}
+
+.para p{
+    margin-top: 190px;
+    padding: 44px;
+    text-align: right;
+    font-size: 23px;
+}
+
 @keyframes hdr{
     0%{left: 5%;}
     100%{left: 80%;}
