--- a/style.css
+++ b/style.css
@@ -321,3 +321,102 @@ footer .social .youtube:hover{
 footer .social .instagram:hover{
     color: #FC427B;
 }
+@media only screen and (min-width:240px) and (max-width:320px) {
+    .menu {
+        width: 100%;
+        height: 76px;
+    }
+
+    .menu .menu-bar {
+        font-size: 14px;
+    }
+
+    .search {
+        width: 56%;
+        margin: 4px;
+    }
+
+    .news-bar p {
+        font-size: 12px;
+    }
+
+    main {
+        height: 304px;
+    }
+
+    .search {
+        width: 72%;
+    }
+
+    .news-bar {
+        margin-top: 6px;
+    }
+
+    section .news-tech {
+        width: 80%;
+    }
+
+    article {
+        width: 100%;
+        margin: 2%;
+        border: none;
+        float: left;
+    }
+
+    header {
+        width: 96%;
+        border: none;
+    }
+
+    header > .hr-t img {
+        width: 89%;
+        height: 258px;
+    }
+
+
+}
+
+@media only screen and (min-width:360px) and (max-width:640px) {
+    .menu {
+        height: 90px;
+    }
+
+    input[type=submit] {
+        float: right;
+        margin-top: 9px;
+    }
+
+    main {
+        height: 304px;
+    }
+
+    .search {
+        width: 72%;
+    }
+
+    .news-bar {
+        margin-top: 6px;
+    }
+
+    section .news-tech {
+        width: 80%;
+    }
+
+    article {
+        width: 100%;
+        margin: 2%;
+        border: none;
+        float: left;
+    }
+
+    header {
+        width: 96%;
+        border: none;
+    }
+
+    header > .hr-t img {
+        width: 89%;
+        height: 258px;
+    }
+
+
