--- a/page/news/style.css
+++ b/page/news/style.css
@@ -48,7 +48,7 @@ body{
 }
 input[type=submit]{
     padding: 6px;
-    font-size: 15px;
+    font-size: 12px;
     border: 2px solid black;
     border-radius: 6px;
     font-weight: bolder;
@@ -88,7 +88,7 @@ input[type=submit]{
     100%{left: 100%;}
 }
 .paragraph{
-    width: 60%;
+    width: 80%;
     overflow: hidden;
     float: right;
     margin: 5%;
@@ -97,15 +97,16 @@ input[type=submit]{
     flex-wrap: wrap; 
 }
 .paragraph > img{
-    width: 100%;
-    height: 500px;
+    width: 80%;
+    height: 400px;
 }
 .paragraph > h1{
     font-family: 'Lateef', cursive;
     text-align: center;
+    width: 80%;
 }
 .paragraph > p{
-    width: 100%;
+    width: 80%;
     dir: rtl; 
     font-family: 'Almarai', sans-serif;
     text-align: center;
@@ -149,4 +150,63 @@ article .art > a p{
     float: left;
     width: 56%;
     margin-right: 2%;
+}
+@media only screen and (min-width:360px) and (max-width:640px) {
+    .menu {
+        width: 100%;
+        height: 76px;
+    }
+
+    .menu .menu-bar {
+        font-size: 14px;
+    }
+
+    .search {
+        width: 56%;
+        margin: 4px;
+    }
+
+    .news-bar p {
+        font-size: 12px;
+    }
+
+    main {
+        height: 304px;
+    }
+
+    .search {
+        width: 72%;
+    }
+
+    .news-bar {
+        margin-top: 6px;
+    }
+
+    section .news-tech {
+        width: 80%;
+    }
+
+    article {
+        width: 100%;
+        margin: 2%;
+        border: none;
+        float: left;
+    }
+
+    header {
+        width: 96%;
+        border: none;
+    }
+
+    header > .hr-t img {
+        width: 89%;
+        height: 258px;
+    }
+    article {
+        width: 100%;
+        margin: 2%;
+        border: none;
+        float: left;
+    }
+
 }
