--- a/page/news/style.css
+++ b/page/news/style.css
@@ -97,6 +97,7 @@ input[type=submit]{
 .paragraph > img{
     width: 100%;
     height: 500px;
+    border-radius: 4px;
 }
 .paragraph > h1{
     font-family: 'Lateef', cursive;
@@ -145,4 +146,64 @@ article .art > a p{
     float: left;
     width: 56%;
     margin-right: 2%;
+}
+footer{
+    width: 100%;
+    height: 100px;
+    margin-top: 30px;
+    background-color: #353b48;
+    position: relative;
+    bottom: 0;
+    left: 0;
+    clear: both;
+}
+footer p{
+    font-family: 'Solway', serif;
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: whitesmoke;
+}
+footer .back{
+    color: whitesmoke;
+    border: 2px solid whitesmoke;
+    border-radius: 4px;
+    padding: 10px;
+    position: absolute;
+    top: 10px;
+    left: 20px; 
+}
+footer .back:hover{
+    color: turquoise;
+    border-color: turquoise;
+}
+footer .social{
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+footer .social a{
+    display: inline;
+    color: white;
+    cursor: pointer;
+    font-size: 40px;
+    margin: 10px;
+}
+footer .social .facebook:hover{
+    color: blue;
+}
+footer .social .twitter:hover{
+    color: #00a8ff;
+}
+footer .social .snapchat:hover{
+    color: yellow;
+}
+footer .social .youtube:hover{
+    color: red;
+}
+footer .social .instagram:hover{
+    color: #FC427B;
 }
