--- a/style.css
+++ b/style.css
@@ -321,104 +321,75 @@ footer .social .youtube:hover{
 footer .social .instagram:hover{
     color: #FC427B;
 }
-@media only screen and (min-width:240px) and (max-width:320px) {
+@media only screen and (min-width:240px) and (max-width:640px) {
+
     .menu {
         width: 100%;
-        height: 76px;
+        height: 110px;
+       margin-bottom: 19px;
     }
-
-    .menu .menu-bar {
-        font-size: 14px;
-    }
-
-    .search {
-        width: 56%;
-        margin-top: 7px;
-        margin-bottom: 7px;
-    }
-
-    .news-bar p {
+    .menu .menu-bar{
+        width: 60px;
+        height: 40px;
         font-size: 12px;
+        margin: 3px;
+        text-align: center;
+        overflow: hidden;
     }
-
-    main {
-        margin-top: 50px;
-        height: 304px;
-    }
-
     .news-bar {
         display: none;
     }
 
-    section .news-tech {
+    form{
+        height: 50px;
         width: 80%;
-    }
-
-    article {
-        width: 100%;
-        margin: 2%;
-        border: none;
+        display: flex;
+        margin: px;
         float: left;
+        overflow-x: hidden;
     }
 
-    header {
-        width: 96%;
-        border: none;
-    }
-
-    header > .hr-t img {
-        width: 89%;
-        height: 258px;
-    }
-
-
-}
-
-@media only screen and (min-width:360px) and (max-width:640px) {
-    .menu {
-        height: 90px;
+    .search{
+     width: 55%;
+     float: left;
     }
 
     input[type=submit] {
-        float: right;
-        margin-top: 19px;
-        margin-bottom: 10px;
+      margin: 10px;
+      height: 30px;
+      width: 33%;
     }
-
     main {
-        height: 350px;
-
+       height: 630;
     }
-
-    .search {
-        width: 72%;
-        margin-top: 19px;
-        margin-bottom: 10px;
+    main > div {
+        width: 99.33%;
+        height: 210px;
+        padding: 3px;
     }
-
-    .news-bar {
-       display: none;
-
-    }
-
+    
     section .news-tech {
-        width: 80%;
+        width: 90%;
+        height: 191px;
     }
-
-    article {
+    section .news-tech > a img {
         width: 100%;
-        margin: 2%;
-        border: none;
-        float: left;
+        height: 100%;
     }
-
+    article {
+        width: 90%;
+    }
+    
     header {
-        width: 96%;
-        border: none;
+        width: 90%;
+    }
+   
+    header > .hr-t img {
+        width: 80%;
+        height: 229px;
+    }
+    footer p {
+        text-align: center;
     }
 
-    header > .hr-t img {
-        width: 89%;
-        height: 258px;
-    }
 }
